--- a/package.json
+++ b/package.json
@@ -22,17 +22,20 @@
     "babel-preset-next": "^1.2.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "express-session": "^1.15.6",
+    "i": "^0.3.6",
     "mongoose": "^5.2.8",
     "next": "^7.0.0",
     "next-routes": "^1.4.2",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.3",
+    "npm": "^6.4.1",
     "npm-run-all": "^4.1.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-instagram-embed": "^1.4.0",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
