--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.0-beta.6",
     "babel-preset-next": "^1.2.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "eslint-config-airbnb-base": "^13.1.0",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
     "i": "^0.3.6",
     "lodash": "^4.17.11",
     "mongoose": "^5.2.8",
+    "morgan": "^1.9.0",
     "next": "^7.0.0",
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.3",
@@ -37,6 +41,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
+    "pm2": "^3.2.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-instagram-embed": "^1.4.0",
@@ -51,13 +56,8 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "url-loader": "^1.1.2",
-    "video-react": "^0.13.0",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "video-react": "^0.13.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "main": "index.js"
 }
