--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "pm2": "^3.2.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-facebook": "^6.0.15",
+    "react-instafeed": "^0.4.0",
     "react-instagram-embed": "^1.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
