--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@u-wave/react-vimeo": "^0.6.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^3.10.0",
@@ -44,6 +45,7 @@
     "passport-local-mongoose": "^5.0.1",
     "pm2": "^3.2.2",
     "react": "^16.5.2",
+    "react-burger-menu": "^2.5.4",
     "react-dom": "^16.5.2",
     "react-facebook": "^6.0.15",
     "react-instafeed": "^0.4.0",
