--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "file-loader": "^3.0.1",
     "i": "^0.3.6",
     "lodash": "^4.17.11",
     "mongoose": "^5.2.8",
