--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pm2": "^3.2.2",
     "react": "^16.5.2",
     "react-burger-menu": "^2.5.4",
+    "react-cookie-consent": "^2.0.1",
     "react-dom": "^16.5.2",
     "react-facebook": "^6.0.15",
     "react-instafeed": "^0.4.0",
