--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "clear": "rm -rf .next/",
-    "test-prod": "npm run clear && npm run build && npm run start",
+    "clear": "rm -rf .next/ node_modules/",
+    "test-prod": "npm run clear && npm install && npm run build && npm run start",
     "build": "next build",
     "start-this": "nodemon -r @babel/register ./index.js",
 		"start": "node -r @babel/register ./index.js",
