--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "clear": "rm -rf .next/",
+    "clear": "rm -rf .next/ node_modules/.cache",
     "test-prod": "npm run clear && npm run build && npm run start",
     "build": "next build",
     "start-this": "nodemon -r @babel/register ./index.js",
